# src/routes/main.ts
@@ -2,6 +2,7 @@ import { Router, Response } from 'express';
 import * as bannerController from '../controllers/banner';
 import * as productController from '../controllers/product';
 import * as categoryController from '../controllers/category';
+import * as cartController from '../controllers/cart';
 export const routes = Router();
 
 routes.get('/ping', (_, res: Response) => {
@@ -13,3 +14,4 @@ routes.get('/products', productController.getProducts);
 routes.get('/products/:id', productController.getProductById);
 routes.get('/products/:id/related', productController.getProductRelated);
 routes.get('/category/:slug/metadata', categoryController.getCategoryWithMetadata);
+routes.post('/cart/mount', cartController.createCart);
